Create basic styles

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Sidebar</title>
+    <style>
+        html {
+            font-family: sys-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            margin: 0;
+        }
+        h1 {
+            font-size: 2em;
+        }
+        h2 {
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
 <aside>
